; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/core/extr_rtw_mlme.c_rtw_is_same_ibss.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/core/extr_rtw_mlme.c_rtw_is_same_ibss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { %struct.security_priv }
%struct.security_priv = type { i64 }
%struct.wlan_network = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@_NO_PRIVACY_ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtw_is_same_ibss(%struct.adapter* %0, %struct.wlan_network* %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca %struct.wlan_network*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.security_priv*, align 8
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store %struct.wlan_network* %1, %struct.wlan_network** %4, align 8
  store i32 1, i32* %5, align 4
  %7 = load %struct.adapter*, %struct.adapter** %3, align 8
  %8 = getelementptr inbounds %struct.adapter, %struct.adapter* %7, i32 0, i32 0
  store %struct.security_priv* %8, %struct.security_priv** %6, align 8
  %9 = load %struct.security_priv*, %struct.security_priv** %6, align 8
  %10 = getelementptr inbounds %struct.security_priv, %struct.security_priv* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @_NO_PRIVACY_, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load %struct.wlan_network*, %struct.wlan_network** %4, align 8
  %16 = getelementptr inbounds %struct.wlan_network, %struct.wlan_network* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %36

21:                                               ; preds = %14, %2
  %22 = load %struct.security_priv*, %struct.security_priv** %6, align 8
  %23 = getelementptr inbounds %struct.security_priv, %struct.security_priv* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @_NO_PRIVACY_, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %34

27:                                               ; preds = %21
  %28 = load %struct.wlan_network*, %struct.wlan_network** %4, align 8
  %29 = getelementptr inbounds %struct.wlan_network, %struct.wlan_network* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = icmp eq i32 %31, 1
  br i1 %32, label %33, label %34

33:                                               ; preds = %27
  store i32 0, i32* %5, align 4
  br label %35

34:                                               ; preds = %27, %21
  store i32 1, i32* %5, align 4
  br label %35

35:                                               ; preds = %34, %33
  br label %36

36:                                               ; preds = %35, %20
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
